dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationServiceBundle__c.object
<CustomObject>
    <description>Queue for Service Bundle messages</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Bundle Integration</relationshipLabel>
        <relationshipName>Service_Bundle_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundleId__c</fullName>
        <label>Bundle Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundleType__c</fullName>
        <label>Bundle Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalBundleName__c</fullName>
        <label>Local Bundle Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalRecordId__c</fullName>
        <label>Local Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalReference__c</fullName>
        <label>Local Reference</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Service Bundle Integration</relationshipLabel>
        <relationshipName>Service_Bundle_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Bundle Integration</label>
    <nameField>
        <displayFormat>SB{0000000000}</displayFormat>
        <label>MessageID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Bundle Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>